iPhone 6S - iOS 15.0 - unable to retrieve WebGL2 context https://bugs.webkit.org/show_bug.cgi?id=226975 rdar://78966563

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-06-28
Reviewed by Kenneth Russell.

Limit the OpenGL ES 3.0 contexts to iOS GPU Family 3, not
4.

The limit was most likely added to guard sample_compare
lod_options properties .lod and .gradient. However, these
are always supported on iOS.

Currently there is already ES 3.0 features implemented
in ANGLE that are guarded by iOS GPU Family 3.

Fixes WebGL 2.0 to work on iPhone6s and similar
devices  (A9, A9X).

* src/libANGLE/renderer/metal/DisplayMtl.mm:
(rx::DisplayMtl::getMaxSupportedESVersion const):

Canonical link: https://commits.webkit.org/239202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279327 268f45cc-cd09-0410-ab3c-d52691b4dbfc